plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

sourceSets {
    api {
        java.srcDirs = ['src/api/java']
        resources.srcDirs = ['src/api/resources']
    }
    pathfinder {
        java.srcDirs = ['src/pathfinder/java']
        resources.srcDirs = ['src/pathfinder/resources']
        compileClasspath += sourceSets.api.output
        runtimeClasspath += sourceSets.api.output
    }
    main {
        java.srcDirs = ['src/layer/java']
        resources.srcDirs = ['src/layer/resources']
        compileClasspath += sourceSets.api.output
        compileClasspath += sourceSets.pathfinder.output
        runtimeClasspath += sourceSets.api.output
        runtimeClasspath += sourceSets.pathfinder.output
    }
    test {
        java.srcDirs = ['src/test/java']
        compileClasspath += sourceSets.api.output
        compileClasspath += sourceSets.pathfinder.output
        runtimeClasspath += sourceSets.api.output
        runtimeClasspath += sourceSets.pathfinder.output
    }
}

loom {
    splitEnvironmentSourceSets()
    mods {
        melonfinder {
            sourceSet sourceSets.api
            sourceSet sourceSets.pathfinder
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

// api and pathfinder must be on the JVM system classpath so Fabric Loader discovers them
// before Knot bootstraps (classPathGroups directory entries break client-JAR resource lookup).
afterEvaluate {
    def apiOut      = sourceSets.api.output
    def pathfinderOut = sourceSets.pathfinder.output
    def earlyClasspath = files(
            apiOut.classesDirs, apiOut.resourcesDir,
            pathfinderOut.classesDirs, pathfinderOut.resourcesDir
    )
    tasks.named('runClient').configure {
        dependsOn 'compileApiJava', 'processApiResources',
                  'compilePathfinderJava', 'processPathfinderResources'
        classpath += earlyClasspath
    }
    tasks.named('runServer').configure {
        dependsOn 'compileApiJava', 'processApiResources',
                  'compilePathfinderJava', 'processPathfinderResources'
        classpath += earlyClasspath
    }
}

// client source set is created by splitEnvironmentSourceSets(); configure it after loom
sourceSets.client {
    java.srcDirs = ['src/client/java']
    resources.srcDirs = ['src/client/resources']
    compileClasspath += sourceSets.main.output
    compileClasspath += sourceSets.api.output
    compileClasspath += sourceSets.pathfinder.output
    runtimeClasspath += sourceSets.main.output
    runtimeClasspath += sourceSets.api.output
    runtimeClasspath += sourceSets.pathfinder.output
}

configurations {
    apiImplementation.extendsFrom implementation
    pathfinderImplementation.extendsFrom implementation
    clientImplementation.extendsFrom implementation
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // JetBrains annotations for @Nonnull/@Nullable/@ApiStatus
    implementation 'org.jetbrains:annotations:24.0.1'

    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()
}

jar {
    inputs.property "archivesName", project.base.archivesName
    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
    // Only classes — api/pathfinder fabric.mod.json are dev-only and must not appear in the prod jar
    from sourceSets.api.output.classesDirs
    from sourceSets.pathfinder.output.classesDirs
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}
